--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Welcome to Gunter Journals</h1>
-  <p>This is a sample paragraph.</p>
+  <p>Gunter Journals is an archive for all things Roblox Gunting related.</p>
   <div>
     This is a div with white text on black background.
   </div>
