added an reference to rpo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Welcome to Gunter Journals</h1>
   <p>Gunter Journals is an archive for all things Roblox Gunting related.</p>
   <div>
-    This is a div with white text on black background.
+    Gunting is a term first mentioned in the book Ready Player One.
   </div>
 <p2>Yo shoutout Iserael lil bro</p2>
 </body>
